--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,88 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "../node_modules/bootstrap/scss/bootstrap";
+
+* {
+    font-family: 'Poppins' !important;
+}
+
+
+button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-primary {
+    width: auto;
+    background: #1565D8;
+    border-radius: 3px;
+    border: unset;
+    position: relative;
+    padding: 5px 12px;
+}
+
+.button-primary:hover {
+    border: 2px solid #CEE0FF !important;
+}
+
+.button-primary:focus {
+    background: #2662A8;
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+}
+
+.button-primary:focus-visible {
+    background: #2662A8;
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 3px;
+    border: unset;
+    outline: unset;
+}
+
+.button-primary:disabled {
+    background: #CEE0FF;
+}
+
+.button-primary .text {
+    width: 48px;
+    height: 20px;
+    left: 12px;
+    top: calc(50% - 20px/2);
+    /* Body/Body > Desktop > Small - 12px */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    /* identical to box height, or 167% */
+    display: flex;
+    align-items: center;
+    letter-spacing: -0.02em;
+    /* Neutral/White */
+    color: #FFFFFF;
+}
+
+.button-primary .icon {
+    left: 22.47%;
+    right: 22.47%;
+    top: 0%;
+    bottom: 0%;
+    color: white;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input {
+    caret-color: transparent !important;
+}
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
