--- a/src/features/verification/components/email-verification-check-section/email-verification-check-section.component.html
+++ b/src/features/verification/components/email-verification-check-section/email-verification-check-section.component.html
@@ -1,4 +1,4 @@
-<div class="content" [attr.stlye.background-image]="'/assets/img/slider-1.jpg'">
+<div class="content">
 
     <div class="top">
         <p class="logo">LOGO</p>
@@ -57,10 +57,11 @@
             <div class="w-100" style="position: absolute; bottom: 0;">
                 <div class="row m-0">
                     <div class="col-12 flex-center" style="height: 2rem;">
-                        <button #button class=" button-primary">
+                        <button #button class=" button-primary" (click)="onProceedClick()">
                             <div class="text">Proceed</div>
                             <div class="icon">
-                                <i class="fa-solid fa-angle-right"></i>
+                                <i style="margin-left: 44px;transform: scale(.8);"
+                                    class="fa-solid fa-chevron-right"></i>
                             </div>
                         </button>
                     </div>
