--- a/src/features/verification/components/email-verification/email-verification.component.html
+++ b/src/features/verification/components/email-verification/email-verification.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid h-100 w-100">
     <div class="row h-100">
         <div class="col-6 p-0">
-            <app-email-verification-check-section></app-email-verification-check-section>
+            <app-email-verification-check-section (verifySuccess)="verifySuccess()" (verifyError)="verifyError()">
+            </app-email-verification-check-section>
         </div>
         <div class="col-6 p-0">
             <app-email-verification-slider></app-email-verification-slider>
