--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "../node_modules/bootstrap/scss/bootstrap";
-
-* {
+body {
     font-family: 'Poppins' !important;
 }
 
+
+.mat-fab {
+    background-color: transparent !important;
+}
 
 button {
     display: flex;
@@ -85,4 +87,31 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+// SweetAlert
+:host::ng-deep.swal2-title {
+    font-family: 'Poppins' !important;
+    font-style: normal !important;
+    font-weight: 700 !important;
+    font-size: 24px !important;
+    line-height: 32px !important;
+    display: flex !important;
+    align-items: flex-end !important;
+    text-align: center !important;
+    letter-spacing: -0.02em !important;
+    color: #485059 !important;
+}
+
+:host::ng-deep h2#swal2-title {
+    font-family: 'Poppins' !important;
+    font-style: normal !important;
+    font-weight: 700 !important;
+    font-size: 24px !important;
+    line-height: 32px !important;
+    display: flex !important;
+    align-items: flex-end !important;
+    text-align: center !important;
+    letter-spacing: -0.02em !important;
+    color: #485059 !important;
 }
