--- a/src/features/verification/components/email-verification-check-section/email-verification-check-section.component.html
+++ b/src/features/verification/components/email-verification-check-section/email-verification-check-section.component.html
@@ -9,7 +9,7 @@
         </p>
     </div>
 
-    <div class="center">
+    <div class="verify-area">
         <div class="rectangle" id="rectangle1">
             <div class="number">
                 <div id="underline1" class="underline" (click)="input1.focus()">—</div>
@@ -52,6 +52,13 @@
         </div>
     </div>
 
+    <div [hidden]="isShowTimerHidden" class="flex-center timer"
+        style="position: absolute; left: 0; right: 0;bottom: 38%;">
+        <div>
+            <countdown #cd [config]="config" (event)="handleEvent($event)"></countdown>
+        </div>
+    </div>
+
     <div class="bottom">
         <div class="container p-0 w-100 h-100">
             <div class="w-100" style="position: absolute; bottom: 0;">
@@ -66,7 +73,8 @@
                         </button>
                     </div>
                     <div class="col-12 flex-center" style="margin-top: 10px;margin-bottom: 17px;">
-                        Didn’t receive email ? <span class="non-button"> Resend</span>
+                        Didn’t receive email ? <span class="non-button"
+                            [ngClass]="{'disabled-text': !isShowTimerHidden}" (click)="onResendClick()"> Resend</span>
                     </div>
                 </div>
             </div>
