--- a/src/features/verification/components/email-verification-check-section/email-verification-check-section.component.scss
+++ b/src/features/verification/components/email-verification-check-section/email-verification-check-section.component.scss
@@ -15,7 +15,7 @@
     padding: 28px 41px 0 28px;
 }
 
-.center {
+.verify-area {
     position: relative;
     height: calc(100% - 32rem);
     display: flex;
@@ -192,4 +192,23 @@ input:focus-visible {
     color: #1565D8;
     margin-left: 4px;
     cursor: pointer;
+}
+
+.timer {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    /* identical to box height, or 175% */
+    display: flex;
+    align-items: center;
+    letter-spacing: -0.02em;
+    /* Shadow Blue */
+    color: #8692A6;
+}
+
+.disabled-text {
+    opacity: .5;
+    cursor: not-allowed;
 }
