--- a/src/features/verification/components/email-verification-check-section/email-verification-check-section.component.scss
+++ b/src/features/verification/components/email-verification-check-section/email-verification-check-section.component.scss
@@ -12,16 +12,18 @@
 
 .top {
     height: 16rem;
-    padding: 28px 41px 0 28px;
+    padding: 2rem 3rem;
 }
 
-.verify-area {
+.center {
     position: relative;
     height: calc(100% - 32rem);
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 2rem 3rem;
 }
+
 
 .bottom {
     position: relative;
@@ -106,14 +108,14 @@
 
 .rectangle {
     box-sizing: border-box;
-    width: 61px;
-    height: 61px;
+    width: 90px;
+    height: 90px;
     left: 168px;
     top: 0px;
     background: #FFFFFF;
     box-shadow: 0px 4px 10px 3px rgba(0, 0, 0, 0.11);
     border-radius: 6px;
-    margin: 23px;
+    margin: auto;
     text-align: -webkit-center;
 }
 
@@ -176,8 +178,8 @@ input:focus-visible {
 
 .underline {
     position: absolute;
-    left: 17px;
-    top: 19px;
+    left: 32px;
+    top: 31px;
     font-weight: 100;
     font-family: serif;
     width: 27px;
@@ -185,6 +187,8 @@ input:focus-visible {
     overflow: unset;
     color: #1565D8;
     height: 10px;
+    transform: scale(1.5);
+
     display: none;
 }
 
@@ -211,4 +215,12 @@ input:focus-visible {
 .disabled-text {
     opacity: .5;
     cursor: not-allowed;
+}
+
+.rectangle:first-child {
+    margin-left: 0;
+}
+
+.rectangle:last-child {
+    margin-right: 0;
 }
