--- a/src/shared/todo-list/components/todo-list/todo-list.component.scss
+++ b/src/shared/todo-list/components/todo-list/todo-list.component.scss
@@ -91,3 +91,23 @@ tr.mat-header-row {
     letter-spacing: -0.02em;
     color: #8692A6;
 }
+
+.my-actions {
+    margin: 0 2em;
+}
+
+.order-1 {
+    order: 1;
+}
+
+.order-2 {
+    order: 2;
+}
+
+.order-3 {
+    order: 3;
+}
+
+.right-gap {
+    margin-right: auto;
+}
